--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,16 @@
 [context.production.environment]
   HUGO_VERSION = "0.36"
+
+[[headers]]
+  for = "/*"
+  [headers.value]
+  X-Frame-Options = "DENY"
+  X-XSS-Protection = "1; mode=block"
+  Content-Security-Policy = """
+  default-src: 'none'; \
+  script-src: 'self'; \
+  img-src: 'self'; \
+  style-src: 'self'; \
+  font-src: 'self' https://fonts.googleapis.com; \
+  report-uri: https://isaackhor.report-uri.com/r/d/csp/enforce; \
+  """
