--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 [[headers]]
 for = "/*"
   [headers.values]
-  Content-Security-Policy = "default-src 'none'; script-src 'self'; img-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; report-uri https://isaackhor.report-uri.com/r/d/csp/enforce;"
+  Content-Security-Policy = "default-src 'none'; script-src 'self'; img-src 'self'; style-src 'self' https://cdnjs.cloudflare.com https://*.cloudfront.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; report-uri https://isaackhor.report-uri.com/r/d/csp/enforce;"
   Referer = "no-referrer"
   X-Content-Type-Options = "nosniff"
   X-Frame-Options = "DENY"
