--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 for = "/*"
   [headers.values]
   Content-Security-Policy = "default-src 'none'; script-src 'self'; img-src 'self'; style-src 'self' https://cdnjs.cloudflare.com https://*.cloudfront.net https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; report-uri https://isaackhor.report-uri.com/r/d/csp/enforce;"
-  Referer = "no-referrer"
+  Referrer-Policy = "no-referrer, strict-origin-when-cross-origin"
   X-Content-Type-Options = "nosniff"
   X-Frame-Options = "DENY"
   X-XSS-Protection = "1; mode=block"
